# QInstrument

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CITATION.cff  CLAUDE.md  DS345.py  DS345Widget.ui  LICENSE  LICENSE.md  OpusWidget.ui  QDS345.py  QInstrumentRack.py  QSR830.py  README.md  SR830.py  SR830Widget.ui  __init__.py  __main__.py  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/workflows/: publish.yml  tests.yml
docs/: add_instrument.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/_static/: nyu.css
docs/api/: abstract_instrument.rst  configure.rst  fake_instrument.rst  index.rst  instrument_rack.rst  instrument_tree.rst  instrument_widget.rst  instrument_worker.rst  serial_instrument.rst  serial_interface.rst
docs/instruments/: ds345.rst  index.rst  ipglaser.rst  opus.rst  piezodrive.rst  proscan.rst  sr830.rst  sr844.rst  tds1000.rst
docs/widgets/: index.rst  qjoystick.rst  qjoystickpad.rst  qledwidget.rst  qrotaryencoder.rst  qrotaryencoderspinbox.rst
instruments/: __init__.py
instruments/DS345/: DS345.py  DS345Widget.ui  QDS345.py  QDS345Widget.py  QFakeDS345.py  __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/IPGLaser/: IPGLaserWidget.ui  QFakeIPGLaser.py  QIPGLaser.py  QIPGLaserWidget.py  __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/IPGLaser/widgets/: IPGControls.py  IPGControls.ui
instruments/IPGPhotonics/IPGLaser/: IPGLaserWidget.ui  __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/Novanta/Opus/: OpusWidget.ui  __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/Novanta/Opus1064/: __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/Novanta/Opus532/: __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/Novanta/Opus660/: __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/Opus/: Opus.py  OpusWidget.ui  QOpus.py  QOpusWidget.py  QOpusWidget.ui  __init__.py  fake.py  instrument.py  widget.py
instruments/PiezoDrive/: PDUS210.py  PDUS210Widget.ui  QPDUS210.py  QPDUS210Widget.py  __init__.py  fake.py  instrument.py  widget.py
instruments/PiezoDrive/PDUS210/: __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/PriorScientific/Proscan/: ProscanWidget.ui  __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/Proscan/: Proscan.py  ProscanWidget.ui  QProscan.py  QProscanWidget.py  QProscanWidget.ui  __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/SR830/: QFakeSR830.py  QSR830.py  QSR830Widget.py  SR830.py  __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/SR844/: QFakeSR844.py  QSR844.py  QSR844Widget.py  SR844Widget.ui  __init__.py  fake.py  instrument.py  widget.py
instruments/StanfordResearch/DS345/: __init__.py  fake.py  instrument.py  tree.py  widget.py
instruments/StanfordResearch/SR830/: SR830Widget.ui  __init__.py  fake.py  instrument.py  tree.py  widget.py  worker.py
instruments/StanfordResearch/SR844/: SR844Widget.ui  __init__.py  fake.py  instrument.py  tree.py  widget.py  worker.py
instruments/TDS1000/: QTDS1000.py
instruments/Tektronix/TDS1000/: __init__.py  instrument.py  tds1000.ipynb
lib/: Configure.py  QAbstractInstrument.py  QFakeInstrument.py  QInstrument.py  QInstrumentClass.py  QInstrumentInterface.py  QInstrumentMixin.py  QInstrumentTree.py  QInstrumentWidget.py  QInstrumentWorker.py  QPollingMixin.py  QReconcileDialog.py  QSerialInstrument.py  QSerialInterface.py  QThreadedInstrumentWidget.py  SerialInstrument.py  __init__.bak  __init__.py  lazy.py  threadedInstrument.py
tests/: conftest.py  instrument_contract.py  test_Configure.py  test_QAbstractInstrument.py  test_QDS345.py  test_QFakeInstrument.py  test_QIPGLaser.py  test_QInstrumentRack.py  test_QInstrumentTree.py  test_QInstrumentWidget.py  test_QInstrumentWorker.py  test_QLedWidget.py  test_QOpus.py  test_QPDUS210.py  test_QPollingMixin.py  test_QProscan.py  test_QReconcileDialog.py  test_QRotaryEncoderSpinBox.py  test_QSR830.py  test_QSR830Worker.py  test_QSR844.py  test_QSerialInstrument.py  test_QSerialInterface.py
widgets/: QJoystick.py  QJoystickPad.py  QLedWidget.py  QLedWidget.txt  QRotaryEncoder.py  QRotaryEncoderSpinBox.py  QRotaryEncoderSpinBox.ui  __init__.py
