[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QInstrument"
version = "1.1.0"
description = "Qt-based framework for controlling scientific instruments over serial ports"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "David G. Grier", email = "david.grier@nyu.edu" },
]
keywords = ["scientific instruments", "serial port", "Qt", "laboratory automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "qtpy>=2.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-autodoc-typehints>=1.25",
]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]

[project.gui-scripts]
qinstrument = "QInstrument.__main__:main"

[project.urls]
Homepage = "https://github.com/davidgrier/QInstrument"
Repository = "https://github.com/davidgrier/QInstrument"

# The project root IS the QInstrument package — no src/ subdirectory.
# package-dir maps the Python package name to the filesystem root.
[tool.setuptools]
package-dir = {"QInstrument" = "."}
packages = [
    "QInstrument",
    "QInstrument.lib",
    "QInstrument.widgets",
    "QInstrument.instruments",
    "QInstrument.instruments.DS345",
    "QInstrument.instruments.IPGLaser",
    "QInstrument.instruments.Opus",
    "QInstrument.instruments.PiezoDrive",
    "QInstrument.instruments.Proscan",
    "QInstrument.instruments.SR830",
    "QInstrument.instruments.SR844",
    "QInstrument.instruments.TDS1000",
]

[tool.setuptools.package-data]
"QInstrument" = ["**/*.ui", "**/*.png"]

[tool.setuptools.exclude-package-data]
"QInstrument" = [".qi/**", "tests/**", "docs/**"]
