[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QInstrument"
version = "2.3.0"
description = "Qt-based framework for controlling scientific instruments over serial ports"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "David G. Grier", email = "david.grier@nyu.edu" },
]
keywords = ["scientific instruments", "serial port", "Qt", "laboratory automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "qtpy>=2.0",
]

[project.optional-dependencies]
tree = [
    "pyqtgraph>=0.13",
]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx-autodoc-typehints>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]

[project.gui-scripts]
qinstrument = "QInstrument.__main__:main"

[project.urls]
Homepage = "https://github.com/davidgrier/QInstrument"
Repository = "https://github.com/davidgrier/QInstrument"
Documentation = "https://qinstrument.readthedocs.io"
Changelog = "https://github.com/davidgrier/QInstrument/blob/main/CHANGELOG.rst"
"Issue Tracker" = "https://github.com/davidgrier/QInstrument/issues"

# The project root IS the QInstrument package — no src/ subdirectory.
# package-dir maps the Python package name to the filesystem root.
[tool.setuptools]
package-dir = {"QInstrument" = "."}
packages = [
    "QInstrument",
    "QInstrument.lib",
    "QInstrument.widgets",
    "QInstrument.instruments",
    "QInstrument.instruments.StanfordResearch",
    "QInstrument.instruments.StanfordResearch.DS345",
    "QInstrument.instruments.StanfordResearch.SR830",
    "QInstrument.instruments.StanfordResearch.SR844",
    "QInstrument.instruments.IPGPhotonics",
    "QInstrument.instruments.IPGPhotonics.IPGLaser",
    "QInstrument.instruments.Novanta",
    "QInstrument.instruments.Novanta.Opus",
    "QInstrument.instruments.Novanta.Opus532",
    "QInstrument.instruments.Novanta.Opus660",
    "QInstrument.instruments.Novanta.Opus1064",
    "QInstrument.instruments.PiezoDrive",
    "QInstrument.instruments.PiezoDrive.PDUS210",
    "QInstrument.instruments.PriorScientific",
    "QInstrument.instruments.PriorScientific.Proscan",
    "QInstrument.instruments.Tektronix",
    "QInstrument.instruments.Tektronix.TDS1000",
]

[tool.setuptools.package-data]
"QInstrument" = ["**/*.ui", "**/*.png"]

[tool.setuptools.exclude-package-data]
"QInstrument" = [".qi/**", "tests/**", "docs/**"]
